--- a/.conkyrc
+++ b/.conkyrc
@@ -12,8 +12,8 @@ conky.config = {
   draw_shades = false,
   use_xft = true,
   font = 'DejaVu Sans Mono:size=10',
-  gap_x = 30,
-  gap_y = 60,
+  gap_x = 15,
+  gap_y = 40,
   maximum_width = 200,
   minimum_height = 5,
   minimum_width = 5,
@@ -26,8 +26,9 @@ conky.config = {
   own_window_colour = '000000',
   own_window_class = 'Conky',
   own_window_argb_visual = true,
+  own_window_argb_value = 200,  
   own_window_type = 'dock',
-  own_window_transparent = true,
+  own_window_transparent = false,
   own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
   stippled_borders = 0,
   update_interval = 1,
@@ -41,6 +42,7 @@ conky.text = [[
   $color${font}${font Open Sans:size=44}$alignr${time %H:%M}$font$color${font Open Sans:size=15}
   $alignr${time %a}, ${time %d %b %Y}$font$color
 
+  # Name
   ${font Open Sans:Bold:size=16}${color 4C7523} Viz
 
   # Sys
@@ -49,7 +51,7 @@ conky.text = [[
   Uptime $alignr $uptime
 
   # CPU Info.
-  ${font Open Sans:Bold:size=10}${color 4C7523}CPU Info. ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color 4C7523}CPU ${hr 2}$color${font}${offset 1}
   $color${font}Usage $alignr $cpu %
   Temperature $alignr ${acpitemp}°C
 
@@ -61,7 +63,7 @@ conky.text = [[
   Buffers $alignr $buffers
   Cache $alignr $cached
 
-  # PROCESSES
+  # Processes
   ${font Open Sans:Bold:size=10}${color 4C7523}PROCESSES ${hr 2}$color${font}${offset 1}
   $color${font Open Sans:bold:size=8}CPU$font
   ${offset 15}${font Noto sans:size=8}${color EDE0FF}Name               ${alignr}PID   CPU%   MEM%
@@ -71,7 +73,7 @@ conky.text = [[
   ${offset 15}${color FF7878}${top name 4} ${alignr}${top pid 4} ${top cpu 4} ${top mem 4}
 
   # Storage
-  ${font Open Sans:Bold:size=10}${color 4C7523}Storage ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color 4C7523}STORAGE ${hr 2}$color${font}${offset 1}
   ${offset 4}${color FFFDE2}home (${fs_type /home}) $color${fs_bar 4 /home/}
   ${offset 4}Total: ${fs_size /home/}
   ${offset 4}Free: ${fs_free /home/}
