--- a/.conkyrc
+++ b/.conkyrc
@@ -31,7 +31,7 @@ conky.config = {
   own_window_transparent = false,
   own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
   stippled_borders = 0,
-  update_interval = 1,
+  update_interval = 2,
   uppercase = false,
   use_spacer = 'none',
   show_graph_scale = false,
@@ -43,20 +43,25 @@ conky.text = [[
   $alignr${time %a}, ${time %d %b %Y}$font$color
 
   # Name
-  ${font Open Sans:Bold:size=16}${color 4C7523} Viz
+  ${font Open Sans:Bold:size=16}${color lightgrey} Viz
 
   # Sys
-  ${font Open Sans:Bold:size=10}${color 4C7523}SYSTEM ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color grey}SYSTEM ${hr 2}$color${font}${offset 1}
   Kernel $alignr $kernel
   Uptime $alignr $uptime
 
+  # Network
+  ${font Open Sans:Bold:size=10}${color grey}NETWORK ${hr 2}$color${font}${offset 1}
+  ${color grey}Down: ${downspeedf wlp0s20f3} Up: ${upspeedf wlp0s20f3}${alignr}
+  ${downspeedgraph wlp0s20f3 80,120 -l} ${upspeedgraph wlp0s20f3 80,50 -l}
+
   # CPU Info.
-  ${font Open Sans:Bold:size=10}${color 4C7523}CPU ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color grey}CPU ${hr 2}$color${font}${offset 1}
   $color${font}Usage $alignr $cpu %
   Temperature $alignr ${acpitemp}°C
 
   # RAM
-  ${font Open Sans:Bold:size=10}${color 4C7523}RAM ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color grey}RAM ${hr 2}$color${font}${offset 1}
   Total $alignr $memmax
   In use $alignr $mem
   Free $alignr $memeasyfree
@@ -64,7 +69,7 @@ conky.text = [[
   Cache $alignr $cached
 
   # Processes
-  ${font Open Sans:Bold:size=10}${color 4C7523}PROCESSES ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color grey}PROCESSES ${hr 2}$color${font}${offset 1}
   $color${font Open Sans:bold:size=8}CPU$font
   ${offset 15}${font Noto sans:size=8}${color EDE0FF}Name               ${alignr}PID   CPU%   MEM%
   ${offset 15}${color FF7878}${top name 1} ${alignr}${top pid 1} ${top cpu 1} ${top mem 1}
@@ -73,7 +78,7 @@ conky.text = [[
   ${offset 15}${color FF7878}${top name 4} ${alignr}${top pid 4} ${top cpu 4} ${top mem 4}
 
   # Storage
-  ${font Open Sans:Bold:size=10}${color 4C7523}STORAGE ${hr 2}$color${font}${offset 1}
+  ${font Open Sans:Bold:size=10}${color grey}STORAGE ${hr 2}$color${font}${offset 1}
   ${offset 4}${color FFFDE2}home (${fs_type /home}) $color${fs_bar 4 /home/}
   ${offset 4}Total: ${fs_size /home/}
   ${offset 4}Free: ${fs_free /home/}
