--- a/.config/i3/config
+++ b/.config/i3/config
@@ -175,6 +175,7 @@ bindsym $mod+r mode "resize"
 bindsym $mod+d exec rofi -show run
 
 bindsym $mod+shift+x exec i3lock
+bindsym $mod+y exec firefox
 
 for_window [class="^.*"] border pixel 0
 new_window 1pixel
